--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,5 +107,12 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btnPreferences"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Set Preferences" />
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
