--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -2,20 +2,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="Usual Waking Hours">
-        <ListPreference
-            android:defaultValue="1"
-            android:entries="@array/times_entries"
-            android:entryValues="@array/times_value"
-            android:key="wakeUp"
-            android:title="@string/wake_up"
-            app:useSimpleSummaryProvider="true" />
-        <ListPreference
-            android:defaultValue="1"
-            android:entries="@array/times_entries"
-            android:entryValues="@array/times_value"
-            android:key="bedtime"
-            android:title="@string/bedtime"
-            app:useSimpleSummaryProvider="true" />
+<!--        <ListPreference-->
+<!--            android:defaultValue="8"-->
+<!--            android:entries="@array/times_entries"-->
+<!--            android:entryValues="@array/times_value"-->
+<!--            android:key="wakeUp"-->
+<!--            android:title="Usual Wake Up time"-->
+<!--            app:useSimpleSummaryProvider="true" />-->
+<!--        <ListPreference-->
+<!--            android:defaultValue="23"-->
+<!--            android:entries="@array/times_entries"-->
+<!--            android:entryValues="@array/times_value"-->
+<!--            android:key="bedtime"-->
+<!--            android:title="Usual Bedtime"-->
+<!--            app:useSimpleSummaryProvider="true" />-->
     </PreferenceCategory>
 
 </PreferenceScreen>
