--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,11 +143,11 @@
             android:layout_height="wrap_content"
             android:text="Reset" />
 
-        <!--        <Button-->
-<!--            android:id="@+id/btnPreferences"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Set Preferences" />-->
+        <Button
+            android:id="@+id/btnPreferences"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Set Preferences" />
 
     </LinearLayout>
 
