added settings button in top right, removed set preferences button

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -17,5 +17,15 @@
             android:title="Usual Bedtime"
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="Data Management">
+        <Preference
+            android:title="Clear Drinking History"
+            android:key="@string/btnClearDrinkingHistory"
+            />
+        <Preference
+            android:title="Reset Cups (REMOVE LATER)"
+            android:key="@string/btnResetCups"
+            />
+    </PreferenceCategory>
 
 </PreferenceScreen>
