--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,11 +84,12 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/txtDrinkingHistoryLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Drinking History:"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:visibility="invisible" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,11 +97,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/txtDaysCompleteLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:text="Nuimber of Days Completed" />
+                android:text="Nuimber of Days Completed"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/txtDaysCompleted"
@@ -117,11 +119,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/txtDaysIncompleteLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:text="Number of Incomplete Days" />
+                android:text="Number of Incomplete Days"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/txtDaysIncomplete"
