--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,14 +1,4 @@
 <resources>
-    <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
-    </string-array>
-
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
-    </string-array>
 
     <string-array name="times_entries">
         <item>12 AM</item>
@@ -62,5 +52,21 @@
         <item>21</item>
         <item>22</item>
         <item>23</item>
+    </string-array>
+
+    <string-array name="notification_entries">
+        <item>1 Hour</item>
+        <item>2 Hours</item>
+        <item>3 Hours</item>
+        <item>4 Hours</item>
+        <item>Don\'t Send Notifications</item>
+    </string-array>
+
+    <string-array name="notifications_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>0</item>
     </string-array>
 </resources>
