--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cups to Drink:"
+            android:text="Today's Progress"
             android:textSize="20sp" />
 
         <LinearLayout
@@ -83,13 +83,24 @@
 
         </LinearLayout>
 
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
         <TextView
             android:id="@+id/txtDrinkingHistoryLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Drinking History:"
+            android:text="Drinking History"
             android:textSize="20sp"
             android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/txtPercentage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -109,8 +120,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textAlignment="textEnd"
-                android:textColor="@color/green" />
+                android:textAlignment="textEnd" />
         </LinearLayout>
 
         <LinearLayout
@@ -131,14 +141,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textAlignment="textEnd"
-                android:textColor="@color/red" />
+                android:textAlignment="textEnd" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/txtPercentage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 
